[gd_scene load_steps=3 format=2]

[ext_resource path="res://Coop.gd" type="Script" id=6]
[ext_resource path="res://chicken/racer_tag.png" type="Texture" id=8]

[node name="Coop" type="Node2D"]
script = ExtResource( 6 )

[node name="Reset" type="Button" parent="."]
margin_left = 69.0
margin_top = 16.0
margin_right = 111.0
margin_bottom = 36.0
text = "RESET"

[node name="New" type="Button" parent="."]
margin_left = 205.0
margin_top = 17.0
margin_right = 247.0
margin_bottom = 37.0
text = "NEW"

[node name="Race" type="Button" parent="."]
margin_left = 938.0
margin_top = 14.0
margin_right = 982.0
margin_bottom = 34.0
text = "RACE"

[node name="Dot" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Dot"]
margin_left = -5.0
margin_top = 10.0
margin_right = 35.0
margin_bottom = 24.0
rect_scale = Vector2( 0.25, 0.25 )
text = "Racer"

[node name="Money" type="Label" parent="."]
margin_left = 904.0
margin_top = 560.0
margin_right = 987.0
margin_bottom = 574.0
text = "Money: $100"

[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Race" to="." method="_on_Race_pressed"]
